<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="#404040">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        tools:ignore="Autofill">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:fontFamily="@font/yangjinfont"
            android:gravity="center"
            android:text="@string/puzzle_talk"
            android:textColor="#7b68ee"
            android:textSize="@dimen/TitleTextSIze" />

            <EditText android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/yangjinfont"
                android:textColor="@color/RealWhite"
                android:hint="@string/id_hint"
                android:textColorHint="@color/RealWhite"
                 />


            <EditText android:id="@+id/edit_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="@font/yangjinfont"
                android:textColor="@color/RealWhite"
                android:hint="@string/pw_hint"
                android:textColorHint="@color/RealWhite"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/id_Save"
            android:text="@string/id_save"
            android:textColor="@color/RealWhite"
            android:layout_marginLeft="25dp"
            android:fontFamily="@font/yangjinfont"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />
        <CheckBox
            android:id="@+id/pw_Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yangjinfont"
            android:textColor="@color/RealWhite"
            android:text="@string/pw_save"/>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnenter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/yangjinfont"
            android:padding="12dp"
            android:text="@string/login"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnsign"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/yangjinfont"
            android:padding="12dp"
            android:text="@string/signIN"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yangjinfont"
            android:text="@string/maker"
            android:textColor="@color/RealWhite"
            android:gravity="center_horizontal"/>




    </LinearLayout>
</ScrollView>