<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/titlecreate"
            android:paddingStart="5dp"
            android:gravity="center"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textSize="20sp"
                android:paddingEnd="5dp"
                android:id="@+id/trade_create_title"
                tools:ignore="RtlSymmetry"
                android:hint="제목은 15자 내외"
                android:layout_marginEnd="5dp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:paddingLeft="5dp"
        android:text="내용 :"
        android:id="@+id/content"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/top"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:id="@+id/trade_create_content"
        android:layout_marginBottom="5dp"
        android:hint="내용을 입력해주세요."
        android:layout_toEndOf="@+id/content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/bottom"
        android:weightSum="2"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:text="@string/tradeCreateCancel"
            android:textSize="20sp"
            android:id="@+id/trade_create_Cancel"
            android:layout_marginRight="20dp"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:id="@+id/trade_create_OK"
            android:text="@string/tradeCreateOK"
            android:textSize="20sp"
            />


    </LinearLayout>


</RelativeLayout>